# friday-bench

./: README.md  friday-bench.cabal
src/: Benchmark.hs
